--- a/src/component/location/index.scss
+++ b/src/component/location/index.scss
@@ -123,4 +123,15 @@
       line-height: 1.4;
     }
   }
+
+  .direction-guide {
+    display: block;
+    width: 100%;
+    height: auto;
+    max-width: 22rem;
+    margin: 1.5rem auto 0;
+    border-radius: 0.75rem;
+    border: 1px solid var(--light-grey-color);
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.08);
+  }
 }
